correct filepaths for style.css and main.js in index.html, add gitignore

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Price is Wrong!</title>
 
-    <link rel="stylesheet" href="/normalize.css" />
-    <link rel="stylesheet" href="/style.css" />
+    <!-- <link rel="stylesheet" href="/normalize.css" /> -->
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <h1>Lets play a game!</h1>
@@ -15,6 +15,6 @@
     <input id="guess" type="number" name="" placeholder="Guess the price!" />
     <button id="clickMe" type="button" name="button">Click Me</button>
     <h2 id="rightOrWrong"></h2>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
