--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   </head>
   <body>
     <h1>Lets play a game!</h1>
-    <h2 id="itemTitle"class="hidden" >Guess the value of a </h2>
+    <h2 id="itemTitle"class="hidden" ></h2>
     <input class="hidden" id="guess" type="number" name="" placeholder="Guess the price!" />
     <button id="random">Random item!</button>
     <button class="hidden" id="clickMe" type="button" name="button">Click Me</button>
     
     <h2 id="rightOrWrong"></h2>
-    <img src="" alt="">
+    <h3 id="count"></h3>
+    <img src="/img/t.jpeg" alt="">
+    <button id="reset" class="hidden">RESET</button>
     <script type="text/javascript" src="js/main.js"></script>
     <audio id="laugh" src="(clown-laughing)-cqp.mp3"></audio>
   </body>
