got img to appear

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     <img src="/img/t.jpeg" alt="">
     <button id="reset" class="hidden">RESET</button>
     <script type="text/javascript" src="js/main.js"></script>
-    <audio id="laugh" src="(clown-laughing)-cqp.mp3"></audio>
+    <!-- <audio id="laugh" src="(clown-laughing)-cqp.mp3"></audio> -->
   </body>
 </html>
