--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h3 id="count"></h3>
     <img src="/img/t.jpeg" alt="">
     <button id="reset" class="hidden">RESET</button>
+    <audio id="laugh" src="/img/clown.mp3"></audio>
     <script type="text/javascript" src="js/main.js"></script>
-    <!-- <audio id="laugh" src="(clown-laughing)-cqp.mp3"></audio> -->
   </body>
 </html>
